remove use of deprecated constructor